--- a/template/assets/css/main.sass
+++ b/template/assets/css/main.sass
@@ -15,8 +15,29 @@ html
     background: $black
     color: $white
 
+  &.with-keyboard
+
+    *:focus
+      position: relative
+
+      @keyframes fade
+        100%
+          box-shadow: inset 0 0 0 1.5px $black
+
+      &::before
+        animation: fade 0.3s forwards
+        border-radius: 6px
+        bottom: -5px
+        content: ''
+        display: block
+        left: -5px
+        position: absolute
+        right: -5px
+        top: -5px
+        transition: box-shadow 0.3s ease-in-out
+
   *:focus
-    outline: 2px solid $black
+    outline: none
 
 body
   font-family: $font-default
