[+] Set default font to input and reset link styles

--- a/template/assets/css/reset.scss
+++ b/template/assets/css/reset.scss
@@ -51,7 +51,13 @@ table {
 input, select, textarea, button {
   background: none;
   border: none;
+  font-family: $font-default;
   padding: 0;
   -moz-appearance: none;
   -webkit-appearance: none;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
